syntax = "proto3";

package com.ankrscan.blockchain;
option go_package = "./;proto";

/**
 *  _____       _   _ _   _
 * | ____|_ __ | |_(_) |_(_) ___  ___
 * |  _| | '_ \| __| | __| |/ _ \/ __|
 * | |___| | | | |_| | |_| |  __/\__ \
 * |_____|_| |_|\__|_|\__|_|\___||___/
 *
 **/
enum ChainType {
  CHAIN_TYPE_UNKNOWN = 0;
  CHAIN_TYPE_ETHEREUM = 1;
  CHAIN_TYPE_POLKADOT = 2;
}

message BlockchainProperties {
  string blockchain_name = 1;
  string verbose_name = 2;
  ChainType chain_type = 4;
  string symbol = 6;
  int64 decimals = 7;
}
